<?xml version="1.0"?>
<package>
  <name>prpy</name>
  <version>0.3.0</version>
  <description>
    Python utilities used by the Personal Robotics Laboratory.
  </description>
  <url type="repository">https://svn.personalrobotics.ri.cmu.edu/pr-ros-pkg/trunk/prpy</url>
  <maintainer email="mkoval@cs.cmu.edu">Michael Koval</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>python</build_depend>
  <run_depend>openrave</run_depend>
  <run_depend>manipulation2</run_depend>
  <run_depend>python</run_depend>
  <run_depend>python-catkin-pkg</run_depend>
  <run_depend>python-numpy</run_depend>
  <run_depend>python-scipy</run_depend>
  <test_depend>unittest</test_depend>
  <test_depend>python-nose</test_depend>
</package>
